fix: sidebar responsive on mobile will not go up when drag

--- a/src/components/assets/App.css
+++ b/src/components/assets/App.css
@@ -773,7 +773,7 @@ button:active {
     bottom: 0;
     left: 15px;
     right: 15px;
-    height: 30vh;
+    height: 25vh;
     background: #fff;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
